--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-reanimated-carousel": "^4.0.0-alpha.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
